; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/atm/extr_mpc.c_mpc_timer_refresh.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/atm/extr_mpc.c_mpc_timer_refresh.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i64, i64 }

@jiffies = common dso_local global i64 0, align 8
@MPC_P2 = common dso_local global i32 0, align 4
@HZ = common dso_local global i32 0, align 4
@mpc_timer = common dso_local global %struct.TYPE_3__ zeroinitializer, align 8
@mpc_cache_check = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @mpc_timer_refresh to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @mpc_timer_refresh() #0 {
  %1 = load i64, i64* @jiffies, align 8
  %2 = load i32, i32* @MPC_P2, align 4
  %3 = load i32, i32* @HZ, align 4
  %4 = mul nsw i32 %2, %3
  %5 = sext i32 %4 to i64
  %6 = add nsw i64 %1, %5
  store i64 %6, i64* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @mpc_timer, i32 0, i32 1), align 8
  %7 = load i64, i64* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @mpc_timer, i32 0, i32 1), align 8
  store i64 %7, i64* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @mpc_timer, i32 0, i32 2), align 8
  %8 = load i32, i32* @mpc_cache_check, align 4
  store i32 %8, i32* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @mpc_timer, i32 0, i32 0), align 8
  %9 = call i32 @add_timer(%struct.TYPE_3__* @mpc_timer)
  ret void
}

declare dso_local i32 @add_timer(%struct.TYPE_3__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
